@@ -7,19 +7,19 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class ChuuVirtualPool {
 
     private static final Logger log = LoggerFactory.getLogger(ChuuVirtualPool.class);
 
-
-    public static ScheduledExecutorService ofScheduled(String poolName) {
-        return new ScheduledThreadPoolExecutor(1,
-                Thread.ofVirtual()
-                        .uncaughtExceptionHandler((t, e) -> log.warn(e.getMessage(), e))
-                        .name("Scheduled-" + poolName + "-Virtual", 0).factory(),
+    public static ScheduledExecutorService ofScheduled(int threads, String poolName) {
+        AtomicInteger ranker = new AtomicInteger(0);
+        return new ScheduledThreadPoolExecutor(threads,
+                (t) -> new Thread(t, poolName + ranker.getAndIncrement()),
                 new ChuuRejector(poolName));
     }
+
 
     public static ExecutorService of(String poolName) {
         return Executors.newThreadPerTaskExecutor(Thread.ofVirtual().uncaughtExceptionHandler((t, e) -> log.warn(e.getMessage(), e)).name(poolName + "-Virtual-", 0).factory());
